# fraktal

./: CMakeLists.txt  imgui.ini
.cache/clangd/index/: main.c.9D104433A946D912.idx
include/: config.h  mb.h  ogl.h
mpi_src/: main.cpp
shaders/: fbo_vertex.glsl  mv_fragment.glsl
src/: config.cpp  export.cpp  framebuffer.cpp  gui.cpp  main.c  main.cpp  mb.cpp  ogl.cpp  shader.cpp
